<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".TaskViewActivity">

    <ImageView
        android:id="@+id/taskViewHeaderIV"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/header"
        tools:ignore="ImageContrastCheck" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/taskViewTB"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#6DFFFFFF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/taskViewMenuBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="#00FFFFFF"
        android:src="@drawable/menu"
        app:layout_constraintBottom_toBottomOf="@+id/taskViewTB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/taskViewHeaderIV"
        tools:ignore="ContentDescription,ImageContrastCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/taskViewBackBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="#00FFFFFF"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="@+id/taskViewTB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/taskViewHeaderIV"
        tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/editTaskBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        android:focusable="true"
        android:importantForAccessibility="no"
        android:scaleType="center"
        android:tintMode="multiply"
        app:backgroundTint="#DAFFFFFF"
        app:elevation="2dp"
        app:fabCustomSize="70dp"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="50dp"
        app:srcCompat="@drawable/task_edit"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/taskViewCV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="157dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="65dp"
        android:backgroundTint="#28848884"
        app:cardCornerRadius="30dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/taskViewFooterIV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/taskViewHeaderIV"
        app:strokeColor="#FFFFFF">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="30dp"
                android:background="#00FFFFFF"
                android:backgroundTint="#00FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:backgroundTint="#00FFFFFF">

                    <TextView
                        android:id="@+id/taskTitleTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        android:fontFamily="@font/convergence"
                        android:inputType="text|textMultiLine"
                        android:minHeight="48dp"
                        android:text="@string/title"
                        android:textColor="#000000"
                        android:textSize="32sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TextSizeCheck,TextViewEdits" />

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/datesCV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="5dp"
                        android:background="#FFFFFF"
                        android:backgroundTint="#FFFFFF"
                        app:cardBackgroundColor="#FFFFFF"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/taskTitleTV"
                        app:strokeColor="#77673AB7">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#00FFFFFF"
                            android:backgroundTint="#00FFFFFF">

                            <TextView
                                android:id="@+id/startDateLabelTV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:layout_marginTop="5dp"
                                android:text="@string/written_at"
                                android:textColor="#90000000"
                                android:textSize="24sp"
                                android:textStyle="bold"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/taskStartDateTV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/date"
                                android:textColor="#000000"
                                android:textSize="18sp"
                                app:layout_constraintBottom_toBottomOf="@+id/startDateLabelTV"
                                app:layout_constraintStart_toEndOf="@+id/startDateLabelTV"
                                app:layout_constraintTop_toTopOf="@+id/startDateLabelTV" />

                            <TextView
                                android:id="@+id/deadlineLabelTV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:text="@string/due_date_"
                                android:textColor="#90000000"
                                android:textSize="24sp"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/startDateLabelTV" />

                            <TextView
                                android:id="@+id/taskDeadlineTV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/deadline"
                                android:textColor="#000000"
                                android:textSize="18sp"
                                app:layout_constraintBottom_toBottomOf="@+id/deadlineLabelTV"
                                app:layout_constraintStart_toEndOf="@+id/deadlineLabelTV"
                                app:layout_constraintTop_toTopOf="@+id/deadlineLabelTV" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </com.google.android.material.card.MaterialCardView>


                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/descriptionCV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="5dp"
                        android:background="#FFFFFF"
                        android:backgroundTint="#FFFFFF"
                        app:cardBackgroundColor="#FFFFFF"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/datesCV"
                        app:strokeColor="#77673AB7">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#00FFFFFF"
                            android:backgroundTint="#00FFFFFF">


                            <TextView
                                android:id="@+id/taskDescriptionTV"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="30dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginEnd="30dp"
                                android:inputType="text|textMultiLine"
                                android:minHeight="48dp"
                                android:paddingBottom="10dp"
                                android:text="@string/description"
                                android:textColor="#000000"
                                android:textSize="18sp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/descriptionLabelTV"
                                tools:ignore="RtlSymmetry,TextViewEdits" />

                            <TextView
                                android:id="@+id/descriptionLabelTV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:layout_marginTop="5dp"
                                android:text="@string/description_"
                                android:textColor="#90000000"
                                android:textSize="24sp"
                                android:textStyle="bold"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </com.google.android.material.card.MaterialCardView>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/taskViewFooterIV"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/footer"
        tools:ignore="ContentDescription,VisualLintBounds" />

</androidx.constraintlayout.widget.ConstraintLayout>