<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    android:elevation="0dp"
    tools:context=".NewTaskActivity">

    <ImageView
        android:id="@+id/newTaskHeaderIV"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/header"
        tools:ignore="ImageContrastCheck" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/newTaskBackTB"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#6DFFFFFF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/newTaskMenuBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="#00FFFFFF"
        android:src="@drawable/menu"
        app:layout_constraintBottom_toBottomOf="@+id/newTaskBackTB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/newTaskHeaderIV"
        tools:ignore="ContentDescription,ImageContrastCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/newTaskBackBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="#00FFFFFF"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="@+id/newTaskBackTB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/newTaskHeaderIV"
        tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/newTaskCV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="157dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="65dp"
        android:backgroundTint="#28848884"
        app:cardCornerRadius="30dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/newTaskFooterIV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/newTaskHeaderIV"
        app:strokeColor="#FFFFFF">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="30dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="35dp"
                android:background="#00FFFFFF"
                android:backgroundTint="#00FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:backgroundTint="#00FFFFFF">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/titleET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:hint="@string/title"
                        android:textColorHint="#000000"
                        app:boxBackgroundColor="@null"
                        app:boxStrokeColor="#77673AB7"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusedByDefault="true"
                            android:inputType="text"
                            android:textColor="#000000"
                            android:textColorHint="#616161"
                            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/descriptionET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="50dp"
                        android:layout_marginEnd="20dp"
                        android:hint="@string/description"
                        android:textColorHint="#000000"
                        app:boxStrokeColor="#77673AB7"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/dateCV">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusedByDefault="false"
                            android:gravity="top"
                            android:inputType="textMultiLine"
                            android:minHeight="100dp"
                            android:textAlignment="gravity"
                            android:textColor="#000000"
                            android:textColorHint="#616161"
                            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/dateCV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="50dp"
                        android:layout_marginEnd="20dp"
                        android:background="@null"
                        android:backgroundTint="@null"
                        android:elevation="0dp"
                        app:cardBackgroundColor="#00FFFFFF"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="0dp"
                        app:cardMaxElevation="0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/titleET"
                        app:strokeColor="@color/mtrl_textinput_default_box_stroke_color"
                        app:strokeWidth="1dp"
                        tools:ignore="PrivateResource">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:backgroundTint="#00FFFFFF">

                            <DatePicker
                                android:id="@+id/datePicker"
                                android:layout_width="wrap_content"
                                android:layout_height="100dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="30dp"
                                android:background="@null"
                                android:backgroundTint="@null"
                                android:calendarTextColor="#000000"
                                android:calendarViewShown="false"
                                android:datePickerMode="spinner"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/DateTV" />

                            <TextView
                                android:id="@+id/DateTV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:layout_marginTop="20dp"
                                android:text="@string/deadline_"
                                android:textColor="#000000"
                                android:textSize="16sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </com.google.android.material.card.MaterialCardView>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/newTaskFooterIV"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/footer"
        tools:ignore="ContentDescription,VisualLintBounds" />

    <Button
        android:id="@+id/newTaskSaveBTN"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#FFB183DB"
        android:elevation="10dp"
        android:fontFamily="@font/convergence"
        android:importantForAccessibility="no"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:stateListAnimator="@null"
        android:text="@string/save"
        android:textColor="#000000"
        android:textSize="25sp"
        android:translationZ="2dp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/newTaskFooterIV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#FF9468B7"
        app:strokeWidth="1dp"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>